# hid

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  scope.md  tradeofs
IETF/: huuid-internet-draft.md
hid64/: LICENSE  README.md  pyproject.toml
hid64/specs/: HID64-spec-v1.0.md
hid64/src/go/: hid64.go
hid64/src/java/: HID64.java  HID64Example.java
hid64/src/python/: hid64.py  python_example.py
hid64/src/rust/: hid64.rs
hid64/tests/java/: HID64Test.java
hid64/tests/python/: test_hid64.py
huuid/: README.md  pyproject.toml
huuid/examples/: jwt_validation.py
huuid/spec/: HUUID-spec-v1.0.md
huuid/src/python/: huuid.py
huuid/tests/python/: test_huuid.py
owasp/: huuid.md
