[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hierarchical-uuid"
version = "1.0.0"
description = "Hierarchical UUID (UUIDv8-compatible, RFC 9562) with HMAC-derived prefixes for stateless local validation."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [{ name = "Héctor Villa" }]
requires-python = ">=3.8"
dependencies = []
keywords = [
    "uuid",
    "uuidv8",
    "rfc-9562",
    "identifier",
    "hierarchical",
    "hmac",
    "cryptography",
    "multi-tenant",
    "stateless-validation",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]

[project.urls]
Homepage = "https://github.com/hektorv/hid"
Specification = "https://github.com/hektorv/hid/blob/main/huuid/spec/HUUID-spec-v1.0.md"
Source = "https://github.com/hektorv/hid"
Issues = "https://github.com/hektorv/hid/issues"

[tool.setuptools]
py-modules = ["huuid"]
package-dir = { "" = "src/python" }

[tool.pytest.ini_options]
testpaths = ["tests/python"]
pythonpath = ["src/python"]
